--- a/Binary_UWP/App.xaml
+++ b/Binary_UWP/App.xaml
@@ -2,6 +2,25 @@
     x:Class="Binary_UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Binary_UWP">
+    xmlns:local="using:Binary_UWP"
+    RequestedTheme="Light">
+    <Application.Resources>
+        <ResourceDictionary x:Key="Light">
+            <!-- Color Palette -->
+            <Color x:Key="Orange">#FFA500</Color>
+            <Color x:Key="Teal">#009688</Color>
+            <Color x:Key="Gray1">#676767</Color>
+            <Color x:Key="Gray2">#545861</Color>
 
+            <SolidColorBrush x:Key="OrangeBrush" Color="{StaticResource Orange}" />
+            <SolidColorBrush x:Key="TealBrush" Color="{StaticResource Teal}" />
+
+            <Style TargetType="TextBlock" x:Name="PageTitle">
+                <Setter Property="VerticalAlignment" Value="Center"></Setter>
+                <Setter Property="Foreground" Value="White"></Setter>
+                <Setter Property="FontWeight" Value="Bold"></Setter>
+                <Setter Property="FontSize" Value="19"></Setter>
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
