--- a/Binary_UWP/Views/FlightView.xaml
+++ b/Binary_UWP/Views/FlightView.xaml
@@ -1,6 +1,5 @@
-﻿   
-    <Page
-    x:Class="Binary_UWP.AcademyView"
+﻿<Page
+    x:Class="Binary_UWP.FlightView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:converter="using:Binary_UWP.Converters" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,7 +8,7 @@
     xmlns:m="using:Binary_UWP.Models"
     mc:Ignorable="d">
     <Page.Resources>
-        <converter:DateFormatConverter x:Name="DateToStringConverter"/>
+        <converter:DateFormatConverter x:Name="TimeToStringConverter"/>
     </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
         <Grid.RowDefinitions>
@@ -22,31 +21,9 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <!--<Rectangle Fill="{StaticResource TealBrush}" Grid.Row="0" Grid.ColumnSpan="3"/>
-        <TextBlock Text="{x:Bind ViewModel.Title}"
-            x:Name="PageTitle"
-            Margin="18"
-            TextAlignment="Center"
-            Style="{StaticResource PageTitle}"
-            Grid.Row="0"
-            Grid.Column="0"/>
-        <TextBox Text="{x:Bind ViewModel.SearchFilter, Mode=TwoWay}"
-            Margin="18"
-            TextAlignment="Left"
-            PlaceholderText="Student name..."
-            Grid.Row="0"
-            Grid.Column="1"/>
-        <Button Content="Search"
-            Click="{x:Bind ViewModel.Search}"
-            HorizontalAlignment="Stretch"
-            Foreground="White"
-            Margin="18"
-            Grid.Row="0"
-            Grid.Column="2"/>-->
-
-        <ListView Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{x:Bind ViewModel.Students}">
+        <ListView Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{x:Bind ViewModel.Flights}">
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="m:Student">
+                <DataTemplate x:DataType="m:Flight">
                     <Grid Margin="16">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40"/>
@@ -57,26 +34,24 @@
                             <RowDefinition Height="24"/>
                         </Grid.RowDefinitions>
 
-                        <Image Source="/Assets/profile.png" Width="36" Height="36" Grid.RowSpan="2" Grid.Column="0"/>
-                        <TextBlock Text="{x:Bind FullName}"
+                        <TextBlock Text="{x:Bind Way}"
                                    Foreground="Black"
                                    FontSize="16"
                                    Padding="20,0,0,0"
                                    Grid.Column="1"
                                    Grid.Row="0"/>
-
                         <StackPanel Orientation="Horizontal"
                                     Grid.Column="1"
                                     Grid.Row="1">
-                            <TextBlock Text="{x:Bind BirthDate, Converter={StaticResource DateToStringConverter}}"
+                            <TextBlock Text="{x:Bind DepartureTime, Converter={StaticResource TimeToStringConverter}}"
                                    Foreground="#444444"
                                    FontSize="13"
                                    Padding="20,0,0,0"/>
-                            <TextBlock Text="From:"
+                            <TextBlock Text="Arrival time:"
                                    Foreground="#888888"
                                    FontSize="13"
                                    Padding="20,0,0,0"/>
-                            <TextBlock Text="{x:Bind City}"
+                            <TextBlock Text="{x:Bind ArrivalTime, Converter={StaticResource TimeToStringConverter}}"
                                    Foreground="#444444"
                                    FontSize="13"
                                    Padding="6,0,0,0"/>
