--- a/Binary_UWP/Views/AcademyView.xaml
+++ b/Binary_UWP/Views/AcademyView.xaml
@@ -9,7 +9,7 @@
     xmlns:m="using:Binary_UWP.Models"
     mc:Ignorable="d">
     <Page.Resources>
-        <converter:DateFormatConverter x:Name="DateToStringConverter"/>
+        <!--<converter:TimeFormatConverter x:Name="DateToStringConverter"/>-->
     </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
         <Grid.RowDefinitions>
@@ -68,10 +68,6 @@
                         <StackPanel Orientation="Horizontal"
                                     Grid.Column="1"
                                     Grid.Row="1">
-                            <TextBlock Text="{x:Bind BirthDate, Converter={StaticResource DateToStringConverter}}"
-                                   Foreground="#444444"
-                                   FontSize="13"
-                                   Padding="20,0,0,0"/>
                             <TextBlock Text="From:"
                                    Foreground="#888888"
                                    FontSize="13"
