--- a/Binary_UWP/Views/AircraftView.xaml
+++ b/Binary_UWP/Views/AircraftView.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Binary_UWP.FlightView"
+    x:Class="Binary_UWP.Views.AircraftView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:converter="using:Binary_UWP.Converters" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,7 +8,7 @@
     xmlns:m="using:Binary_UWP.Models"
     mc:Ignorable="d">
     <Page.Resources>
-        <converter:TimeFormatConverter x:Name="TimeToStringConverter"/>
+        <converter:DateFormatConverter x:Name="DateFormatConverter"/>
     </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
         <Grid.RowDefinitions>
@@ -21,9 +21,9 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <ListView Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{x:Bind ViewModel.Flights}">
+        <ListView Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{x:Bind ViewModel.Aircrafts}">
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="m:Flight">
+                <DataTemplate x:DataType="m:Aircraft">
                     <Grid Margin="16">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40"/>
@@ -34,7 +34,7 @@
                             <RowDefinition Height="24"/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Text="{x:Bind Way}"
+                        <TextBlock Text="{x:Bind AircraftName}"
                                    Foreground="Black"
                                    FontSize="16"
                                    Padding="20,0,0,0"
@@ -43,15 +43,11 @@
                         <StackPanel Orientation="Horizontal"
                                     Grid.Column="1"
                                     Grid.Row="1">
-                            <TextBlock Text="{x:Bind DepartureTime, Converter={StaticResource TimeToStringConverter}}"
-                                   Foreground="#444444"
-                                   FontSize="13"
-                                   Padding="20,0,0,0"/>
-                            <TextBlock Text="Arrival time:"
+                            <TextBlock Text="DateRelease:"
                                    Foreground="#888888"
                                    FontSize="13"
                                    Padding="20,0,0,0"/>
-                            <TextBlock Text="{x:Bind ArrivalTime, Converter={StaticResource TimeToStringConverter}}"
+                            <TextBlock Text="{x:Bind DateRelease, Converter={StaticResource DateFormatConverter}}"
                                    Foreground="#444444"
                                    FontSize="13"
                                    Padding="6,0,0,0"/>
