--- a/Binary_UWP/Views/MainPage.xaml
+++ b/Binary_UWP/Views/MainPage.xaml
@@ -23,8 +23,8 @@
         <SplitView Name="mySplitView" Grid.Row="1" OpenPaneLength="200">
             <SplitView.Pane>
                 <ListBox SelectionMode="Single" SelectionChanged="ListBox_SelectionChanged">
-                    <ListBoxItem Name="academy">
-                        <TextBlock FontSize="24" Text="Academy" />
+                    <ListBoxItem Name="aircrafts">
+                        <TextBlock FontSize="24" Text="Aircrafts" />
                     </ListBoxItem>
                     <ListBoxItem Name="flights">
                         <TextBlock FontSize="24" Text="Flights" />
