--- a/Binary_UWP/Views/TypeAircraftView.xaml
+++ b/Binary_UWP/Views/TypeAircraftView.xaml
@@ -1,15 +1,14 @@
 ﻿<Page
-    x:Class="Binary_UWP.FlightView"
+    x:Class="Binary_UWP.Views.TypeAircraftView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:converter="using:Binary_UWP.Converters" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converter="using:Binary_UWP.Converters"
     xmlns:m="using:Binary_UWP.Models"
     mc:Ignorable="d">
-    
     <Page.Resources>
-        <converter:TimeFormatConverter x:Name="TimeToStringConverter"/>
+        <converter:DateFormatConverter x:Name="DateFormatConverter"/>
     </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
         <Grid.RowDefinitions>
@@ -17,16 +16,14 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="74*"/>
-            <ColumnDefinition Width="9*"/>
-            <ColumnDefinition Width="217*"/>
-            <ColumnDefinition Width="900*"/>
-            <ColumnDefinition Width="300*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
 
-        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Flights}" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="3">
+        <ListView Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{x:Bind ViewModel.TypeAircrafts}">
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="m:Flight">
+                <DataTemplate x:DataType="m:TypeAircraft">
                     <Grid Margin="16">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40"/>
@@ -37,7 +34,7 @@
                             <RowDefinition Height="24"/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Text="{x:Bind Way}"
+                        <TextBlock Text="{x:Bind Id}"
                                    Foreground="Black"
                                    FontSize="16"
                                    Padding="20,0,0,0"
@@ -46,40 +43,18 @@
                         <StackPanel Orientation="Horizontal"
                                     Grid.Column="1"
                                     Grid.Row="1">
-                            <TextBlock Text="{x:Bind DepartureTime, Converter={StaticResource TimeToStringConverter}}"
-                                   Foreground="#444444"
-                                   FontSize="13"
-                                   Padding="20,0,0,0"/>
-                            <TextBlock Text="Arrival time:"
+                            <TextBlock Text="CarryingCapacity:"
                                    Foreground="#888888"
                                    FontSize="13"
                                    Padding="20,0,0,0"/>
-                            <TextBlock Text="{x:Bind ArrivalTime, Converter={StaticResource TimeToStringConverter}}"
+                            <TextBlock Text="{x:Bind CarryingCapacity}"
                                    Foreground="#444444"
                                    FontSize="13"
                                    Padding="6,0,0,0"/>
                         </StackPanel>
-
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-
-        <Button Content="Create" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Center">
-            <Button.Flyout>
-                <Flyout x:Name="dialogBox">
-                    <Flyout.Content>
-                        <StackPanel>                                    
-                            <TextBlock Text="Подтвердить выбор" />
-                            <Button Click="Button_Click2" Content="OK" Margin="0 10 0 0" />
-                        </StackPanel>
-                    </Flyout.Content>
-                </Flyout>
-            </Button.Flyout>
-        </Button>
-        
-        <TextBox Grid.Column="2" HorizontalAlignment="Left" Margin="87,10,0,0" Text="{x:Bind ArrivalTime }"" VerticalAlignment="Top"/>
-        <TextBox Text="{x:Bind Way}" x:Name="textBox2" Height="30" Text="{Binding =textBox1, Path=Text, Mode=TwoWay}" />
-
     </Grid>
 </Page>
