--- a/Binary_UWP/Views/AircraftView.xaml
+++ b/Binary_UWP/Views/AircraftView.xaml
@@ -20,41 +20,65 @@
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-
-        <ListView Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{x:Bind ViewModel.Aircrafts}">
+        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
+            <Button.Flyout>
+                <Flyout x:Name="dialogBox">
+                    <Flyout.Content>
+                        <StackPanel>
+                            <TextBlock Text="AircraftName"></TextBlock>
+                            <TextBox Text="{x:Bind ViewModel.Aircraft.AircraftName, Mode=TwoWay}"></TextBox>
+                            <TextBlock Text="TypeAircraftId"></TextBlock>
+                            <TextBox Text="{x:Bind ViewModel.Aircraft.TypeAircraftId, Mode=TwoWay}"></TextBox>
+                            <TimePicker  Time="{x:Bind ViewModel.Aircraft.Lifetime, Mode=TwoWay}" Header="Lifetime"/>
+                            <Button Click="{x:Bind ViewModel.Create}"  Content="Save" Margin="0 10 0 0" />
+                            <Button Click="ButtonClose_Click"   Content="Close" Margin="0 10 0 0" />
+                        </StackPanel>
+                    </Flyout.Content>
+                </Flyout>
+            </Button.Flyout>
+        </Button>
+        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Aircrafts, Mode=OneWay}" HorizontalAlignment="Center" 
+                  Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="0"
+                  IsItemClickEnabled="True"
+                  ItemClick="AircraftList_ItemClick">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Aircraft">
-                    <Grid Margin="16">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="24"/>
-                            <RowDefinition Height="24"/>
-                        </Grid.RowDefinitions>
+                    <Grid Tapped="ListTapped" Background="Transparent">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="24"/>
+                                <RowDefinition Height="24"/>
+                            </Grid.RowDefinitions>
 
-                        <TextBlock Text="{x:Bind AircraftName}"
+                            <TextBlock 
+                                   Text="{x:Bind AircraftName}"
                                    Foreground="Black"
                                    FontSize="16"
-                                   Padding="20,0,0,0"
-                                   Grid.Column="1"
+                                   Padding="0,0,0,0"
+                                   Grid.Column="0"
                                    Grid.Row="0"/>
-                        <StackPanel Orientation="Horizontal"
-                                    Grid.Column="1"
-                                    Grid.Row="1">
-                            <TextBlock Text="DateRelease:"
-                                   Foreground="#888888"
-                                   FontSize="13"
-                                   Padding="20,0,0,0"/>
-                            <TextBlock Text="{x:Bind DateRelease, Converter={StaticResource DateFormatConverter}}"
-                                   Foreground="#444444"
-                                   FontSize="13"
-                                   Padding="6,0,0,0"/>
-                        </StackPanel>
+                        </Grid>
+                        <FlyoutBase.AttachedFlyout>
+                            <Flyout>
+                                <StackPanel>
+                                    <TextBlock Text="AircraftName"></TextBlock>
+                                    <TextBox Text="{x:Bind AircraftName, Mode=TwoWay}"></TextBox>
+                                    <TextBlock Text="TypeAircraftId"></TextBlock>
+                                    <TextBox Text="{x:Bind TypeAircraftId, Mode=TwoWay}"></TextBox>
+                                    <TimePicker  Time="{x:Bind Lifetime, Mode=TwoWay}" Header="Lifetime"/>
+                                    <Button  Click ="SaveEntity" Content="Save"></Button>
+                                    <Button  Click ="DeleteEntity" Content="Delete"></Button>
+                                </StackPanel>
+                            </Flyout>
+                        </FlyoutBase.AttachedFlyout>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
     </Grid>
 </Page>
+
+
