--- a/Binary_UWP/Views/FlightView.xaml
+++ b/Binary_UWP/Views/FlightView.xaml
@@ -37,6 +37,7 @@
                 </Flyout>
             </Button.Flyout>
         </Button>
+   
         <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Flights, Mode=OneWay}" HorizontalAlignment="Center" 
                   Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="0"
                   IsItemClickEnabled="True"
@@ -60,6 +61,18 @@
                                    Padding="0,0,0,0"
                                    Grid.Column="0"
                                    Grid.Row="0"/>
+                            <StackPanel Orientation="Horizontal"
+                                    Grid.Column="1"
+                                    Grid.Row="1">
+                                <TextBlock Text="Id:"
+                                   Foreground="#888888"
+                                   FontSize="13"
+                                   Padding="20,0,0,0"/>
+                                <TextBlock Text="{x:Bind Id}"
+                                   Foreground="#444444"
+                                   FontSize="13"
+                                   Padding="6,0,0,0"/>
+                            </StackPanel>
                         </Grid>
                         <FlyoutBase.AttachedFlyout>
                             <Flyout>
@@ -81,109 +94,3 @@
         </ListView>
     </Grid>
 </Page>
-
-
-<!--<Page
-    x:Class="Binary_UWP.FlightView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converter="using:Binary_UWP.Converters"
-    xmlns:m="using:Binary_UWP.Models"
-    mc:Ignorable="d">
-
-    <Page.Resources>
-        <converter:TimeFormatConverter x:Name="TimeToStringConverter"/>
-    </Page.Resources>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="74*"/>
-            <ColumnDefinition Width="9*"/>
-            <ColumnDefinition Width="217*"/>
-            <ColumnDefinition Width="900*"/>
-            <ColumnDefinition Width="300*"/>
-        </Grid.ColumnDefinitions>
-
-        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Flights, Mode=OneWay}" HorizontalAlignment="Center" 
-                  Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="3"
-                  IsItemClickEnabled="True"
-                  ItemClick="FlightList_ItemClick">
-            <ListView.ItemTemplate >
-                <DataTemplate x:DataType="m:Flight">
-                    <Grid Tapped="ListTapped" Background="Transparent">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="24"/>
-                                <RowDefinition Height="24"/>
-                            </Grid.RowDefinitions>
-
-                            <TextBlock 
-                                   Text="{x:Bind Way}"
-                                   Foreground="Black"
-                                   FontSize="16"
-                                   Padding="20,0,0,0"
-                                   Grid.Column="1"
-                                   Grid.Row="0"/>
-                            <StackPanel Orientation="Horizontal"
-                                    Grid.Column="1"
-                                    Grid.Row="1">
-                                <TextBlock Text="{x:Bind DepartureTime, Converter={StaticResource TimeToStringConverter}}"
-                                   Foreground="#444444"
-                                   FontSize="13"
-                                   Padding="20,0,0,0"/>
-                                <TextBlock Text="Arrival time:"
-                                   Foreground="#888888"
-                                   FontSize="13"
-                                   Padding="20,0,0,0"/>
-                                <TextBlock Text="{x:Bind ArrivalTime, Converter={StaticResource TimeToStringConverter}}"
-                                   Foreground="#444444"
-                                   FontSize="13"
-                                   Padding="6,0,0,0"/>
-                            </StackPanel>
-                        </Grid>
-                        <FlyoutBase.AttachedFlyout>
-                            <Flyout>
-                                <StackPanel>
-                                    <TextBlock Text="ArrivalPoint"></TextBlock>
-                                    <TextBox Text="{x:Bind ArrivalPoint, Mode=TwoWay}" ></TextBox>
-                                    <TextBlock Text="DeparturePoint"></TextBlock>
-                                    <TextBox Text="{x:Bind DeparturePoint, Mode=TwoWay}" ></TextBox>
-                                    <TimePicker  Time="{x:Bind ArrivalTime, Mode=TwoWay}" Header="Arrival time"/>
-                                    <TimePicker  Time="{x:Bind DepartureTime, Mode=TwoWay}" Header="Departure time"/>
-                                    <Button  Click ="SaveEntity" Content="Save"></Button>
-                                    <Button  Click ="DeleteEntity" Content="Delete"></Button>                                </StackPanel>
-                            </Flyout>
-                        </FlyoutBase.AttachedFlyout>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-
-        -->
-<!--<Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
-            <Button.Flyout>
-                <Flyout x:Name="dialogBox">
-                    <Flyout.Content>
-                        <StackPanel>
-                            <TextBox Text="{x:Bind ViewModel.Flight.ArrivalPoint, Mode=TwoWay}"></TextBox>
-                            <TextBox Text="{x:Bind ViewModel.Flight.DeparturePoint, Mode=TwoWay}"></TextBox>
-                            <Button Click="{x:Bind ViewModel.Create}"  Content="Create" Margin="0 10 0 0" />
-                            <Button Click="ButtonClose_Click"   Content="OK" Margin="0 10 0 0" />
-
-                        </StackPanel>
-                    </Flyout.Content>
-                </Flyout>
-            </Button.Flyout>
-        </Button>-->
-<!--
-    </Grid>
-</Page>-->
