--- a/Binary_UWP/Views/PilotView.xaml
+++ b/Binary_UWP/Views/PilotView.xaml
@@ -20,26 +20,65 @@
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-
-        <ListView Grid.ColumnSpan="3" Grid.Row="1" ItemsSource="{x:Bind ViewModel.Pilots}">
+        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
+            <Button.Flyout>
+                <Flyout x:Name="dialogBox">
+                    <Flyout.Content>
+                        <StackPanel>
+                            <TextBlock Text="Surname"></TextBlock>
+                            <TextBox Text="{x:Bind ViewModel.Pilot.Surname, Mode=TwoWay}"></TextBox>
+                            <TextBlock Text="Name"></TextBlock>
+                            <TextBox Text="{x:Bind ViewModel.Pilot.Name, Mode=TwoWay}"></TextBox>
+                            <TextBlock Text="Experience"></TextBlock>
+                            <TextBox Text="{x:Bind ViewModel.Pilot.Experience, Mode=TwoWay}"></TextBox>
+                            <TextBlock Text="CrewId"></TextBlock>
+                            <TextBox Text="{x:Bind ViewModel.Pilot.CrewId, Mode=TwoWay}"></TextBox>
+                            <Button Click="{x:Bind ViewModel.Create}"  Content="Save" Margin="0 10 0 0" />
+                            <Button Click="ButtonClose_Click"   Content="Close" Margin="0 10 0 0" />
+                        </StackPanel>
+                    </Flyout.Content>
+                </Flyout>
+            </Button.Flyout>
+        </Button>
+        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Pilots, Mode=OneWay}" HorizontalAlignment="Center" 
+                  Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="0"
+                  IsItemClickEnabled="True"
+                  ItemClick="PilotList_ItemClick">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Pilot">
-                    <Grid Margin="16">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="24"/>
-                            <RowDefinition Height="24"/>
-                        </Grid.RowDefinitions>
+                    <Grid Tapped="ListTapped" Background="Transparent">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="24"/>
+                                <RowDefinition Height="24"/>
+                            </Grid.RowDefinitions>
 
-                        <TextBlock Text="{x:Bind FullName}"
+                            <TextBlock Text="{x:Bind FullName}"
                                    Foreground="Black"
                                    FontSize="16"
                                    Padding="20,0,0,0"
                                    Grid.Column="1"
                                    Grid.Row="0"/>
+                        </Grid>
+                        <FlyoutBase.AttachedFlyout>
+                            <Flyout>
+                                <StackPanel>
+                                    <TextBlock Text="Surname"></TextBlock>
+                                    <TextBox Text="{x:Bind Surname, Mode=TwoWay}"></TextBox>
+                                    <TextBlock Text="Name"></TextBlock>
+                                    <TextBox Text="{x:Bind Name, Mode=TwoWay}"></TextBox>
+                                    <TextBlock Text="Experience"></TextBlock>
+                                    <TextBox Text="{x:Bind Experience, Mode=TwoWay}"></TextBox>
+                                    <TextBlock Text="CrewId"></TextBlock>
+                                    <TextBox Text="{x:Bind CrewId, Mode=TwoWay}"></TextBox>
+                                    <Button  Click ="SaveEntity" Content="Save"></Button>
+                                    <Button  Click ="DeleteEntity" Content="Delete"></Button>
+                                </StackPanel>
+                            </Flyout>
+                        </FlyoutBase.AttachedFlyout>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
