--- a/Binary_UWP/Views/AircraftView.xaml
+++ b/Binary_UWP/Views/AircraftView.xaml
@@ -16,15 +16,15 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
+        <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Create" Click="{x:Bind ViewModel.CreateClicked}"
+                Margin="20 20 0 0" Background="LightPink">
             <Button.Flyout>
-                <Flyout x:Name="dialogBox">
+                <Flyout x:Name="dialogBox" >
                     <Flyout.Content>
-                        <StackPanel>
+                        <StackPanel >
                             <TextBlock Text="AircraftName"></TextBlock>
                             <TextBox Text="{x:Bind ViewModel.Aircraft.AircraftName, Mode=TwoWay}"></TextBox>
                             <TextBlock Text="TypeAircraftId"></TextBlock>
@@ -37,10 +37,10 @@
                 </Flyout>
             </Button.Flyout>
         </Button>
-        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Aircrafts, Mode=OneWay}" HorizontalAlignment="Center" 
-                  Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="0"
+        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Aircrafts, Mode=OneWay}" HorizontalAlignment="Left" 
+                  Margin="20,0,0,0" VerticalAlignment="Center" Grid.Column="0" Grid.ColumnSpan="2"
                   IsItemClickEnabled="True"
-                  ItemClick="AircraftList_ItemClick">
+                  ItemClick="AircraftList_ItemClick" >
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Aircraft">
                     <Grid Tapped="ListTapped" Background="Transparent">
@@ -61,9 +61,9 @@
                                    Grid.Column="0"
                                    Grid.Row="0"/>
                         </Grid>
-                        <FlyoutBase.AttachedFlyout>
+                        <FlyoutBase.AttachedFlyout  >
                             <Flyout>
-                                <StackPanel>
+                                <StackPanel >
                                     <TextBlock Text="AircraftName"></TextBlock>
                                     <TextBox Text="{x:Bind AircraftName, Mode=TwoWay}"></TextBox>
                                     <TextBlock Text="TypeAircraftId"></TextBlock>
