--- a/Binary_UWP/Views/FlightView.xaml
+++ b/Binary_UWP/Views/FlightView.xaml
@@ -19,7 +19,7 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
+        <Button  Margin="20,20,0,20"  Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
             <Button.Flyout>
                 <Flyout x:Name="dialogBox">
                     <Flyout.Content>
@@ -30,7 +30,7 @@
                             <TextBox Text="{x:Bind ViewModel.Flight.DeparturePoint, Mode=TwoWay}"></TextBox>
                             <TimePicker  Time="{x:Bind ViewModel.Flight.ArrivalTime, Mode=TwoWay}" Header="Arrival time"/>
                             <TimePicker  Time="{x:Bind ViewModel.Flight.DepartureTime, Mode=TwoWay}" Header="Departure time"/>
-                            <Button Click="{x:Bind ViewModel.Create}"  Content="Save" Margin="0 10 0 0" />
+                            <Button Click="{x:Bind ViewModel.Create}"  Content="Save" Margin="0, 10, 10, 10" />
                             <Button Click="ButtonClose_Click"   Content="Close" Margin="0 10 0 0" />
                         </StackPanel>
                     </Flyout.Content>
@@ -38,8 +38,8 @@
             </Button.Flyout>
         </Button>
    
-        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Flights, Mode=OneWay}" HorizontalAlignment="Center" 
-                  Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="0"
+        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Flights, Mode=OneWay}"
+                  Margin="20,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left"
                   IsItemClickEnabled="True"
                   ItemClick="FlightList_ItemClick">
             <ListView.ItemTemplate>
